[tool.poetry]
name = "poetry add flask"
version = "0.1.0"
description = ""
authors = ["Arsen Dolichnyi <arsen.dolichnyi.shi.2022@lpnu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
